--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <div class="header">
         <img src="./contents/BATE_SOLUTIONS_logo_transparent.png" style="height: 100px; margin-top: -20px;" alt="logo">
         <li>
-            <ul><a id="links" href="./home.html">HOME</a></ul>
+            <ul><a id="links" href="./index.html">HOME</a></ul>
             <ul><a id="links" href="./work.html">WORK</a></ul>
             <ul><a id="links" href="./about.html">ABOUT</a></ul>
             <ul><a id="links" href="">FAQ</a></ul>
